
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ usb_error_t ;
struct usb_device_request {int dummy; } ;
struct ural_softc {int sc_mtx; int sc_udev; } ;


 int DPRINTFN (int,char*,int ) ;
 int hz ;
 scalar_t__ ural_pause (struct ural_softc*,int) ;
 scalar_t__ usbd_do_request_flags (int ,int *,struct usb_device_request*,void*,int ,int *,int) ;
 int usbd_errstr (scalar_t__) ;

__attribute__((used)) static usb_error_t
ural_do_request(struct ural_softc *sc,
    struct usb_device_request *req, void *data)
{
 usb_error_t err;
 int ntries = 10;

 while (ntries--) {
  err = usbd_do_request_flags(sc->sc_udev, &sc->sc_mtx,
      req, data, 0, ((void*)0), 250 );
  if (err == 0)
   break;

  DPRINTFN(1, "Control request failed, %s (retrying)\n",
      usbd_errstr(err));
  if (ural_pause(sc, hz / 100))
   break;
 }
 return (err);
}
